# photo-organizer

./: .gitignore  Makefile  README.md  TODO.md  install.sh  pyproject.toml  uninstall.sh
photo_organizer/: __init__.py  config.py  directory_config.py  drive_comparison.py  file_utils.py  logger.py  main.py  metadata.py  organizer.py
tests/: __init__.py  conftest.py  test_archive_skipping.py  test_bug_reproduction.py  test_config.py  test_directory_config.py  test_drive_sync.py  test_metadata.py  test_organizer.py  test_safety_critical.py
